[package]
name = "qif"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "library that can read and write QIF (Quicken Interchange File)."
homepage = "https://github.com/bryceac/qif_rs"
readme = "README.mediawiki"
repository = "https://github.com/bryceac/qif_rs"
keywords = ["qif", "quicken", "files", "parsing", "reading"]

[dependencies]
chrono = "0.4.40"
regex = "1.11.1"
unicode-segmentation = "1.12.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
